force-app/main/default/objects/AccidentReception_CallData__c/AccidentReception_CallData__c.object-meta.xml
<CustomObject>
    <label>事故受付_コールデータ</label>
    <nameField>
        <label>入電者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>