force-app/main/default/objects/AccidentReception_CallData__c/fields/AccidentCheck__c.field-meta.xml
<CustomField>
    <fullName>AccidentCheck__c</fullName>
    <label>事故か否か</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>事故</fullName>
            </value>
            <value>
                <fullName>事故以外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>