force-app/main/default/objects/AccidentReception_CallData__c/fields/AccidentDate__c.field-meta.xml
<CustomField>
    <fullName>AccidentDate__c</fullName>
    <label>事故日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>