force-app/main/default/objects/AccidentReception_CallData__c/fields/AccidentDateF__c.field-meta.xml
<CustomField>
    <fullName>AccidentDateF__c</fullName>
    <formula>IF ( NOT ( ISBLANK ( AccidentDate__c ) ),IF (  TEXT( AccidentCheck__c ) = &quot;事故&quot;, AccidentDate__c , AccidentDate__c  &amp; &quot;（問い合わせのみ）&quot;) , &quot;&quot;)</formula>
    <label>事故日</label>
    <type>Text</type>
</CustomField>