force-app/main/default/objects/AccidentReception_CallData__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>顧客属性名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>事故受付_コールデータ</relationshipLabel>
    <relationshipName>CallData_Account</relationshipName>
    <type>Lookup</type>
</CustomField>