force-app/main/default/objects/AccidentReception_CallData__c/fields/CallDataLine__c.field-meta.xml
<CustomField>
    <fullName>CallDataLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>回線</label>
    <referenceTo>CallDataLine__c</referenceTo>
    <relationshipName>CallDataOj</relationshipName>
    <type>Lookup</type>
</CustomField>