force-app/main/default/objects/AccidentReception_CallData__c/fields/CallerContactInformation1__c.field-meta.xml
<CustomField>
    <fullName>CallerContactInformation1__c</fullName>
    <label>入電者の連絡先</label>
    <type>Phone</type>
</CustomField>