force-app/main/default/objects/AccidentReception_CallData__c/fields/CallerContactInformation1_Text__c.field-meta.xml
<CustomField>
    <fullName>CallerContactInformation1_Text__c</fullName>
    <formula>CallerContactInformation1__c</formula>
    <label>入電者の連絡先</label>
    <type>Text</type>
</CustomField>