force-app/main/default/objects/AccidentReception_CallData__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>マスタレコード ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>事故受付_コールデータ</relationshipLabel>
    <relationshipName>CallData_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>