force-app/main/default/objects/AccidentReception_CallData__c/fields/FreeMemo__c.field-meta.xml
<CustomField>
    <fullName>FreeMemo__c</fullName>
    <label>フリーメモ欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>