force-app/main/default/objects/AccidentReception_CallData__c/fields/IdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>IdentificationNumber__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>コールデータ識別番号</label>
    <type>AutoNumber</type>
</CustomField>