force-app/main/default/objects/AccidentReception_CallData__c/fields/IncomingCallDay__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDay__c</fullName>
    <label>第一報入電日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>