force-app/main/default/objects/AccidentReception_CallData__c/fields/IncomingCallDayAuto__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDayAuto__c</fullName>
    <formula>IF ( AND (  DATEVALUE(CreatedDate)  &gt;= DATE (1868,09,08), DATEVALUE(CreatedDate) &lt;= DATE (1912,07,29)), &quot;M&quot; &amp; TEXT ( YEAR ( DATEVALUE(CreatedDate) ) - 1867 ) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( DATEVALUE(CreatedDate) )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( DATEVALUE(CreatedDate) )) , IF ( AND ( DATEVALUE(CreatedDate) &gt;= DATE (1912,07,30), DATEVALUE(CreatedDate) &lt;= DATE (1926,12,24)), &quot;T&quot; &amp; TEXT ( YEAR ( DATEVALUE(CreatedDate) ) - 1911) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( DATEVALUE(CreatedDate) )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( DATEVALUE(CreatedDate) )) , IF ( AND ( DATEVALUE(CreatedDate) &gt;= DATE (1926,12,25), DATEVALUE(CreatedDate) &lt;= DATE (1989,01,07)), &quot;S&quot; &amp; TEXT ( YEAR ( DATEVALUE(CreatedDate) ) - 1925 ) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; TEXT ( DAY ( DATEVALUE(CreatedDate) )) , IF ( AND ( DATEVALUE(CreatedDate)  &gt;= DATE (1989,01,08), DATEVALUE(CreatedDate) &lt;= DATE (2019,04,30)), &quot;H&quot; &amp; TEXT ( YEAR ( DATEVALUE(CreatedDate) ) - 1988 ) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( DATEVALUE(CreatedDate) )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( DATEVALUE(CreatedDate) )) , IF ( DATEVALUE(CreatedDate) &gt;= DATE (2019,05,01), &quot;R&quot; &amp; TEXT ( YEAR ( DATEVALUE(CreatedDate) ) - 2018) &amp; &quot;/&quot; &amp; TEXT ( MONTH ( DATEVALUE(CreatedDate) )) &amp; &quot;/&quot; &amp; TEXT ( DAY ( DATEVALUE(CreatedDate) )) , &quot;&quot;)))))</formula>
    <label>第一報入電日（自動）</label>
    <type>Text</type>
</CustomField>