force-app/main/default/objects/AccidentReception_CallData__c/fields/IncomingCallDayS__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallDayS__c</fullName>
    <label>第一報入電日（西暦）</label>
    <type>Date</type>
</CustomField>