force-app/main/default/objects/AccidentReception_CallData__c/fields/IncomingCallTimeAuto__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallTimeAuto__c</fullName>
    <formula>MID( TEXT(  CreatedDate + 0.375 ), 11, 6 )</formula>
    <label>第一報入電時間（自動）</label>
    <type>Text</type>
</CustomField>