force-app/main/default/objects/AccidentReception_CallData__c/fields/IncomingCallTimeSearch__c.field-meta.xml
<CustomField>
    <fullName>IncomingCallTimeSearch__c</fullName>
    <label>入電時間（検索）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>