force-app/main/default/objects/AccidentReception_CallData__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>携帯</label>
    <type>Phone</type>
</CustomField>