force-app/main/default/objects/AccidentReception_CallData__c/fields/Numbering__c.field-meta.xml
<CustomField>
    <fullName>Numbering__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>ナンバリング</label>
    <type>AutoNumber</type>
</CustomField>