force-app/main/default/objects/AccidentReception_CallData__c/fields/PolicyNumberCheak__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumberCheak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>他証券番号有</label>
    <type>Checkbox</type>
</CustomField>