force-app/main/default/objects/AccidentReception_CallData__c/fields/RegisteredPhoneNumber1_Text__c.field-meta.xml
<CustomField>
    <fullName>RegisteredPhoneNumber1_Text__c</fullName>
    <formula>RegisteredPhoneNumber1__c</formula>
    <label>登録の電話番号</label>
    <type>Text</type>
</CustomField>