force-app/main/default/objects/AccidentReception_CallData__c/fields/RegisteredPhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>RegisteredPhoneNumber2__c</fullName>
    <label>登録の電話番号２</label>
    <type>Phone</type>
</CustomField>