force-app/main/default/objects/AccidentReception_CallData__c/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（親）契約者・入電者</label>
    <referenceTo>AccidentReception_CallData__c</referenceTo>
    <relationshipLabel>事故受付_コールデータ</relationshipLabel>
    <relationshipName>RelatedContact</relationshipName>
    <type>Lookup</type>
</CustomField>