force-app/main/default/objects/AccidentReception_CallData__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>入電者と契約者の関係</label>
    <length>255</length>
    <type>Text</type>
</CustomField>