force-app/main/default/objects/AccidentReception_CallData__c/fields/TelMobile__c.field-meta.xml
<CustomField>
    <fullName>TelMobile__c</fullName>
    <label>Tel（携帯）</label>
    <type>Phone</type>
</CustomField>