force-app/main/default/objects/AccidentReception_CallData__c/validationRules/ChkAccidentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ChkAccidentDate</fullName>
    <active>true</active>
    <description>事故日の形式チェック</description>
    <errorConditionFormula>IF ( ISBLANK (  AccidentDate__c ), FALSE, !REGEX(  AccidentDate__c , &apos;(R|H|S|T|M)\\d{1,2}/\\d{1,2}/\\d{1,2}&apos;) )</errorConditionFormula>
    <errorDisplayField>AccidentDate__c</errorDisplayField>
    <errorMessage>日付形式（例：R3/1/1）で入力してください。</errorMessage>
</ValidationRule>