force-app/main/default/objects/AccidentReception_CallData__c/validationRules/ChkName.validationRule-meta.xml
<ValidationRule>
    <fullName>ChkName</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( ISBLANK (  Name )  || NOT(ISBLANK ( BedoreSessionID__c )) , FALSE, 
NOT ( OR(REGEX ( SUBSTITUTE(SUBSTITUTE(Name,&apos; &apos;,&apos;&apos;),&apos;　&apos;,&apos;&apos;) , &quot;^[ｦ-ﾟ]*$&quot; ),REGEX( SUBSTITUTE(SUBSTITUTE(Name,&apos; &apos;,&apos;&apos;),&apos;　&apos;,&apos;&apos;) , &quot;^[ァ-ー]+$&quot;) ) ))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>カタカナで入力してください</errorMessage>
</ValidationRule>