force-app/main/default/objects/AccidentReception_CallData__c/listViews/Owned.listView-meta.xml
<ListView>
    <fullName>Owned</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>私が所有しているコールデータ</label>
</ListView>