force-app/main/default/objects/AccidentReception_CallData__c/listViews/ThisDay.listView-meta.xml
<ListView>
    <fullName>ThisDay</fullName>
    <columns>NAME</columns>
    <columns>CallerContactInformation1_Text__c</columns>
    <columns>ContractorName__c</columns>
    <columns>RegisteredPhoneNumber1_Text__c</columns>
    <columns>PolicyNumber__c</columns>
    <columns>IncomingCallDay__c</columns>
    <columns>IncomingCallTime__c</columns>
    <columns>AccidentDate__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>当日のコールデータ</label>
</ListView>